// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ImageProgress: Match snapshots 1 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
      },
      Object {
        "backgroundColor": "#17212D",
      },
    ]
  }
>
  <TouchableOpacity
    activeOpacity={0.8}
    onPress={[Function]}
  >
    <AnimatedCircularProgress
      duration={500}
      easing={[Function]}
      fill={100}
      prefill={0}
      size={562.5}
      tintColor="#009CFF"
      width={3}
    >
      <Component />
    </AnimatedCircularProgress>
  </TouchableOpacity>
</View>
`;

exports[`ImageProgress: Match snapshots 2 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
      },
      Object {
        "backgroundColor": "#FFF",
      },
    ]
  }
>
  <TouchableOpacity
    activeOpacity={0.8}
    onPress={[Function]}
  >
    <AnimatedCircularProgress
      duration={500}
      easing={[Function]}
      fill={0}
      prefill={0}
      size={562.5}
      tintColor="#E88C0C"
      width={3}
    >
      <Component />
    </AnimatedCircularProgress>
  </TouchableOpacity>
</View>
`;
